--- a/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
+++ b/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
@@ -17,14 +17,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
                 @Html.ActionLink("ASP.NET MVC 5 Sample Site", "Index", "Home", null, new { @class = "navbar-brand" })
+            </div>
+
+                 <div id="navbar" class="navbar-collapse collapse">
+                     <ul class="nav navbar-nav navbar-right">
+                         <li>@Html.ActionLink("Feedback", "Index", "Feedback")</li>
+                     </ul>
+                     </div>
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                 </ul>
             </div>
         </div>
-    </div>
+
 
     <div class="container body-content">
         @RenderBody()
